# multi-agent-orchestrator-core

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: agent_module_spec.md
dsl/: compiler.py  parser.py  validator.py
examples/async_action/: run.py
examples/boundary_escalation/: run.py
examples/human_review/: run.py
examples/simple_sync/: run.py
execution/: dispatcher.py  event_bus.py  worker_interface.py
nodes/action/: action.py
nodes/decision/: boundary.py  condition.py  decision.py  human_gate.py
runtime/: decision_contract.py  engine.py  models.py  resume.py
sdk/: agent_contract.py  agent_registry.py
state/: event_store.py  snapshot.py  store.py
tests/: test_action.py  test_boundary.py  test_dsl.py  test_engine.py  test_human_gate.py  test_models.py  test_resume.py  test_state_store.py  test_trace.py
trace/: collector.py  emitter.py  ledger_adapter.py  model.py
